# sandbox-k8s-react-go-rust-postgres

./: .gitignore  README.md  docker-compose.yml
infra/k8s/: README.md  ingress.yaml  secret.yaml
infra/k8s/frontend/: deployment-frontend.yaml  service-frontend.yaml
infra/k8s/go-api/: deployment-go-api.yaml  service-go-api.yaml
infra/k8s/postgres/: service-postgres.yaml  statefulset-postgres.yaml
infra/k8s/rust-api/: deployment-rust-api.yaml  service-rust-api.yaml
services/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
services/frontend/src/: App.css  App.jsx
services/go-api/: Dockerfile  db.go  go.mod  handler.go  main.go
services/rust-api/: Cargo.toml  Dockerfile
services/rust-api/src/: db.rs  handler.rs  main.rs
